--- a/learn/templates/queue.html
+++ b/learn/templates/queue.html
@@ -1,22 +1,40 @@
 {% extends "base.html" %}
 
+{%block headInclude %}
+<link rel="stylesheet" href="/static/queue.css" />
+{% endblock %}
+
 
 {% block content %}
-<br>
-<b>FAQ Page</b> <br><br>
-
-<b>What should I use Codeplasm for?</b><br>
-Codeplasm has been specially designed for you to play with and improve your
-coding skills. It will also show you your comparative technical strenghts and
-growth areas so you can plan future development, and also optionally allow
-prospective employers to browse if you want a job.<br><br>
 
 
-<b>Why did the chicken cross the road?</b><br>
-Because he was a fucking rockstar.
-<br>
-<br>
+<div id='queueWrapper'>
+<form id="queueForm" action="">
+	<div id='conceptTitle'>Concept Desired</div>
+	<input id='queueText' type='text' name="concept"/>
+</form>
+</div>
 
+{%if showConcept %}
+<div id='showLastConcept'>{{submittedConcept}} submitted</div>
+<script>
+$(document).ready(function() {
+ 	$("#showLastConcept").fadeIn( 700 );
+	setTimeout( function(){ $("#showLastConcept").fadeOut( 700 ); }, 2000 );
+	//$("#showLastConcept").fadeOut( 700 );
+});
+</script>
+{%endif%}
+
+<script>
+$(document).ready(function() {
+ 	$("#queueText").submit( function(){
+ 		alert( 'did submit ' + $("queueText").val() );	
+ 	});
+});
+
+
+</script>
 
 
 {% endblock %}
