--- a/learn/templates/settings.html
+++ b/learn/templates/settings.html
@@ -7,8 +7,46 @@
 
 {% block content %}
 
+<div id='calendarBlock'>
+	{% for d in days_of_week %}
+	<div class='perDaySetting'>
+	<div class='dayTitle'>{{d}}</div>
+	<select id='{{d}}Select' class='lengthInput'>
+		<option value="0"> --- </option>
+		<option value="15">15 Minutes</option>
+    	<option value="30">30 Minutes</option>
+		<option value="60">60 Minutes</option>
+	</select>		
+	</div>
+	
+	{%endfor%}
+	<div>
+	<input type='button' id='saveButton' value='Save'/>
+	</div>
+</div>
 
-Settings is coming soon :)
+	<!-- really need to start doing jquery buttons.... -->
+<script>
+$("#saveButton").click(function() {
+  console.log( 'clicked Save');
+  //collect from active tab - ugly but dont know javascript metaprogramming yet...
+  var postdata = "";
+  {% for d in days_of_week %}
+  postdata+= "&{{d}}=".toUpperCase() + $("#{{d}}Select").val();
+  {% endfor %}
+  console.log( postdata );
 
-
+  $.ajax({
+    type: "POST",
+    url: "{% url learn.views.saveSettings %}",
+    data: postdata,
+    success: function(data) {
+    	console.log( "Success!" );
+    },
+    error: function(request, status, exception) {
+    	alert(status + " " + exception);
+    }
+  });
+});
+</script>
 {% endblock %}
