--- a/learn/templates/settings.html
+++ b/learn/templates/settings.html
@@ -8,14 +8,14 @@
 {% block content %}
 
 <div id='calendarBlock'>
-	{% for d in days_of_week %}
+	{% for d in prevSettings %}
 	<div class='perDaySetting'>
-	<div class='dayTitle'>{{d}}</div>
-	<select id='{{d}}Select' class='lengthInput'>
-		<option value="0"> --- </option>
-		<option value="15">15 Minutes</option>
-    	<option value="30">30 Minutes</option>
-		<option value="60">60 Minutes</option>
+	<div class='dayTitle'>{{d.day}}{{d.minutes}}</div>
+	<select id='{{d.day}}Select' class='lengthInput'>
+		<option value="0"  {%if d.minutes == '0' %}selected{%endif%}> --- </option>
+		<option value="15" {%if d.minutes == '15'%}selected{%endif%}>15 Minutes</option>
+    	<option value="30" {%if d.minutes == '30'%}selected{%endif%}>30 Minutes</option>
+		<option value="60" {%if d.minutes == '60'%}selected{%endif%}>60 Minutes</option>
 	</select>		
 	</div>
 	
@@ -31,8 +31,8 @@ $("#saveButton").click(function() {
   console.log( 'clicked Save');
   //collect from active tab - ugly but dont know javascript metaprogramming yet...
   var postdata = "";
-  {% for d in days_of_week %}
-  postdata+= "&{{d}}=".toUpperCase() + $("#{{d}}Select").val();
+  {% for d in prevSettings %}
+  postdata+= "&{{d.day}}=".toUpperCase() + $("#{{d.day}}Select").val();
   {% endfor %}
   console.log( postdata );
 
