--- a/learn/templates/queue.html
+++ b/learn/templates/queue.html
@@ -22,6 +22,8 @@ $(document).ready(function() {
  	$("#showLastConcept").fadeIn( 700 );
 	setTimeout( function(){ $("#showLastConcept").fadeOut( 700 ); }, 2000 );
 	//$("#showLastConcept").fadeOut( 700 );
+	$("#queueText").focus();
+	console.log( 'here' );
 });
 </script>
 {%endif%}
