--- a/learn/static/session.css
+++ b/learn/static/session.css
@@ -2,7 +2,7 @@
 background:#fafafa;
 /*border-radius:15px;*/
 border:solid;
-border-color:#e3e9ff #fff #e3e9ff #fff;
+border-color:#e3e9ff #fafafa #e3e9ff #fafafa;
 margin: 20px 0;
 padding: 20px;
 width:100%;
