--- a/learn/templates/base.html
+++ b/learn/templates/base.html
@@ -15,14 +15,17 @@
   </head>
 
   <body>
-  		 <div id="topsection">
-		<div class='navigation'>
-	  		<a href="{% url learn.views.queue %}">home</a>
-	  		<a href="{% url learn.views.session %}">doSession</a>
-	  		<a href="{% url learn.views.concepts %}">myConcepts</a>
-	  		<a href="{% url learn.views.settings %}">settings</a>
-	  		<a href="{% url learn.views.logout %}">logOut</a>
-		</div>
+  	 <div id="topsection">
+  	 	<div class='page_content'>
+	  	 	<div id='alpha'>Alpha</div>
+			<div class='navigation'>
+		  		<a href="{% url learn.views.queue %}">home</a>
+		  		<a href="{% url learn.views.session %}">doSession</a>
+		  		<a href="{% url learn.views.concepts %}">myConcepts</a>
+		  		<a href="{% url learn.views.settings %}">settings</a>
+		  		<a href="{% url learn.views.logout %}">logOut</a>
+			</div>
+		  </div>
       </div>
     <div class='page_content'>
 
