--- a/learn/templates/registration/register.html
+++ b/learn/templates/registration/register.html
@@ -2,7 +2,7 @@
 
 {% block headInclude %}
 <style type="text/css"> 
-.page_content{ width: 700px; margin:auto; border-radius:15px;}
+.reg_content{ width: 700px; margin:auto; border-radius:15px;}
 #registerForm{ position:relative; top:20px; left:20px; float:left;}
 #logleft{ float:left; display:inline; width:400px;}
 #logright{float:left; display:inline; position:relative; top:25px; width:250px; color:#777;}
@@ -18,7 +18,7 @@ a{ text-decoration:none; color: #000;}
 
 
 {% block content %}
-<div class='page_content' style='height:300px;background:#fff; position:relative; top:20px;'>
+<div class='reg_content' style='height:300px;background:#fff; position:relative; top:20px;'>
 <div id='logleft'>
 <form id='registerForm' method="POST" action="{% url learn.views.register %}">
 	{% csrf_token %}
