--- a/learn/static/settings.css
+++ b/learn/static/settings.css
@@ -1,11 +1,13 @@
-#calendarBlock{
-width:960px;
-height:200px;
+.title{
+margin: 30px 0 20px 0;
+font-weight: 700;
+font-size:120%;
+line-height:1.0em;
 }
 
 .perDaySetting{
 width:120px;
-margin:30px 10px 40px 0;
+margin:0 10px 40px 0;
 float:left;
 }
 
@@ -17,8 +19,39 @@ font-weight:700;
 }
 
 #saveButton{
-margin:20px 0 0 5px;
-font-size:120%;
+margin:20px 0 0 0;
+font-size:105%;
 line-height:1.0em;
 font-weight:700;
 }
+
+#reminderType{
+float:left;
+width: 160px;
+}
+
+.rLabel{
+width:60px;
+float:left;
+}
+
+#numberAndTime{
+float:left;
+}
+#suppliedNumber{
+width:250px;
+color:#777;
+font-size:95%;
+margin: -8px 0 0 0;
+}
+
+#explanation{
+float:left;
+width:420px;
+color:#555;
+font-size:95%;
+line-height:1.0em;
+margin: -3px 0 0 0;
+}
+
+
