marginally better UI. goal apache and postgres over wknd

--- a/learn/templates/base.html
+++ b/learn/templates/base.html
@@ -20,10 +20,10 @@
 	  	 	<div id='alpha'>Alpha</div>
 			<div class='navigation'>
 		  		<a href="{% url learn.views.queue %}">home</a>
-		  		<a href="{% url learn.views.session %}">doSession</a>
-		  		<a href="{% url learn.views.concepts %}">myConcepts</a>
+		  		<a href="{% url learn.views.session %}">learn</a>
+		  		<a href="{% url learn.views.concepts %}">concepts</a>
 		  		<a href="{% url learn.views.settings %}">settings</a>
-		  		<a href="{% url learn.views.logout %}">logOut</a>
+		  		<a href="{% url learn.views.logout %}">logout</a>
 			</div>
 		  </div>
       </div>
